0-15 colors could no longer be used as values for the -f/-b/-c/etc.
options.  I don't remember that ever being a feature to begin with,
but it took me all of 5 minutes to make it happen, so I figure what
the hell.  Here ya go.
----------------------------------------------------------------------
Thu Jun 28 19:01:05 2001                        Michael Jennings (mej)

Finished updating the man page for 0.9.1.
----------------------------------------------------------------------
Tue Jul  3 18:01:24 2001                        Michael Jennings (mej)

All the docs and themes should now be up-to-date.  Unless a
showstopping bug turns up in the near future, this is pretty much it
for 0.9.1.  Now we just need some testing to make sure there's
nothing horridly wrong....  So you all can test while we finish up
the web site and the backgrounds. :-)
----------------------------------------------------------------------
Fri Jul 13 17:07:45 2001                        Michael Jennings (mej)

This is mostly cosmetic, but fairly important nonetheless.  Saved
config files should not contain the "main" context.
----------------------------------------------------------------------
Thu Jul 19 12:19:21 2001                        Michael Jennings (mej)

Minor fix to correct popup scrollbar handling on startup.
----------------------------------------------------------------------
Sat Jul 21 20:22:26 2001                        Michael Jennings (mej)

Although I have yet to be able to reproduce it, I believe this will
fix Debian bug #104393.  I don't think the lower parts of that array
were getting properly zeroed. :(
----------------------------------------------------------------------
Mon Jul 23 11:05:45 2001                        Michael Jennings (mej)

Well that was dumb.  PNG backgrounds which were tiled rather than
scaled would end up nuking most of the window.  Fixed now.
----------------------------------------------------------------------