@@ -582,16 +582,19 @@ AC_ARG_WITH(mousewheel,
             fi, AC_MSG_RESULT(yes)
                 AC_DEFINE(MOUSEWHEEL)
 )
+
 MULTICHAR_ENCODING=""
 AC_MSG_CHECKING(for multi-charset support)
 AC_ARG_ENABLE(multi-charset,
 [  --enable-multi-charset  compile with multibyte font support],
             if test "$enableval" = "no"; then
               MULTI_CHARSET_TYPE=""
+            elif test "$enableval" = "yes"; then
+              MULTI_CHARSET_TYPE="unicode"
             else
               MULTI_CHARSET_TYPE="$enableval"
             fi,
-            if (xlsfonts | grep 10646 >/dev/null 2>&1); then
+            if (xlsfonts | grep 10646 >&5 2>&5); then
               MULTI_CHARSET_TYPE="unicode"
             else
               MULTI_CHARSET_TYPE=""
